--- a/seb/services-2.html
+++ b/seb/services-2.html
@@ -26,7 +26,7 @@
 	<section class="hero">
 		<div class="container">
 			<div class="row">
-				<div class="col-12 col-md-7 col-lg-6">
+				<div class="col-12 col-md-6">
 					<div class="hero__content hero__content--inner">
 						<h2 class="hero__content__title">Информационно-аналитические<br> услуги</h2>
 
@@ -40,10 +40,10 @@
 						</p>
 					</div>
 				</div>
-				<div class="col-12 col-md-5 col-lg-6">
+				<div class="col-12 col-md-6">
           <div class="hero__content hero__content--inner">
             <div class="row justify-content-end">
-              <div class="col-12 col-md-9">
+              <div class="col-12 col-lg-9">
                 <div class="hero__content__subtitle text-center">
                   Персональное предложение<br>
                   для вашего бизнеса
@@ -160,6 +160,251 @@
     </div>
   </div>
 </section>
+
+<section class="unique-offer">
+  <div class="container">
+    <div class="row align-items-end">
+      <div class="col-12 col-md-6 col-lg-5 offset-lg-1">
+        <img class="unique-offer__img" src="img/personal-manager.png" alt="">
+      </div>
+      <div class="col-12 col-md-6 col-lg-5">
+        <h3 class="unique-offer__title text-center">
+          Хотите добавить что-то еще?<br>
+          Подготовим персональное<br>
+          предложение
+        </h3>
+        <p class="unique-offer__subtitle text-center">Наши специалисты подготовят персональное предложение в течение 1 рабочего дня</p>
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-12 col-lg-9">
+            <div class="form-group">
+              <input name="phone" class="form-control form-control-lg text-center" type="text" placeholder="+7 (___) ___-__-__">
+            </div>
+            <div class="form-group">
+              <button type="submit" class="btn btn-warning btn-block btn-lg">Получить предложение</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<div class="partner">
+  <div class="container">
+    <div class="partner__title">С кем мы сотрудничаем</div>
+    <div class="row justify-content-center">
+      <div class="col-6 col-md-4 col-lg-3">
+        <div class="partner__item">
+          <img class="partner__item__img" src="img/partner-1.png" alt="">
+          <div class="partner__item__title">Федеральная налоговая служба</div>
+          <div class="partner__item__descr">Проверка контрагента занимает на 30% меньше времени</div>
+        </div>
+      </div>
+      <div class="col-6 col-md-4 col-lg-3">
+        <div class="partner__item">
+          <img class="partner__item__img" src="img/partner-2.png" alt="">
+          <div class="partner__item__title">Федеральная служба судебных приставов</div>
+          <div class="partner__item__descr">Проверка контрагента занимает на 30% меньше времени</div>
+        </div>
+      </div>
+      <div class="col-6 col-md-4 col-lg-3">
+        <div class="partner__item">
+          <img class="partner__item__img" src="img/partner-3.png" alt="">
+          <div class="partner__item__title">Министерство внутренних дел России</div>
+          <div class="partner__item__descr">Проверка контрагента занимает на 30% меньше времени</div>
+        </div>
+      </div>
+      <div class="col-6 col-md-4 col-lg-3">
+        <div class="partner__item">
+          <img class="partner__item__img" src="img/partner-4.png" alt="">
+          <div class="partner__item__title">Роспотребнадзор</div>
+          <div class="partner__item__descr">Проверка контрагента занимает на 30% меньше времени</div>
+        </div>
+      </div>
+      <div class="col-6 col-md-4 col-lg-3">
+        <div class="partner__item">
+          <img class="partner__item__img" src="img/partner-5.png" alt="">
+          <div class="partner__item__title">Арбитражный суд</div>
+          <div class="partner__item__descr">Проверка контрагента занимает на 30% меньше времени</div>
+        </div>
+      </div>
+      <div class="col-6 col-md-4 col-lg-3">
+        <div class="partner__item">
+          <img class="partner__item__img" src="img/partner-6.png" alt="">
+          <div class="partner__item__title">Государственная инспекция труда</div>
+          <div class="partner__item__descr">Проверка контрагента занимает на 30% меньше времени</div>
+        </div>
+      </div>
+      <div class="col-6 col-md-4 col-lg-3">
+        <div class="partner__item">
+          <img class="partner__item__img" src="img/partner-7.png" alt="">
+          <div class="partner__item__title">Госпожнадзор</div>
+          <div class="partner__item__descr">Проверка контрагента занимает на 30% меньше времени</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="results">
+  <div class="container">
+    <div class="results__title">Результаты нашей работы</div>
+    <div class="owl-carousel" data-items="1" data-dots>
+      <div class="results__item">
+        <div class="row">
+          <div class="col-12 col-sm-5 col-md-6">
+            <img class="results__item__img" src="img/sert.jpg" alt="">
+          </div>
+          <div class="col-12 col-sm-7 col-md-6">
+            <div class="results__item__content">
+              <p><b>Главное управление министерства внутренних дел <br>
+                  Российской Федерации по Северо-западному Федеральному округу</b></p>
+              <p><b>Проблема:</b></p>
+              <p>Отсутствие комплексной системы по проверке контрагентов<br>
+              и кандидатов при трудоустройстве на работу.</p>
+              <p> &nbsp; </p>
+              <p><b>Решение:</b></p>
+              <p>Разработка и внедрение регламентов по улучшению
+              текущей деятельности компании в части проверки
+              физических и юридических лиц, до начала
+              взаимодействия.</p>
+              <p>
+                <a class="btn btn-warning btn-lg" href="#modal-order" data-toggle="modal">Хочу также</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="results__item">
+        <div class="row">
+          <div class="col-12 col-sm-5 col-md-6">
+            <img class="results__item__img" src="img/sert.jpg" alt="">
+          </div>
+          <div class="col-12 col-sm-7 col-md-6">
+            <div class="results__item__content">
+              <p><b>Главное управление министерства внутренних дел <br>
+                  Российской Федерации по Северо-западному Федеральному округу</b></p>
+              <p><b>Проблема:</b></p>
+              <p>Отсутствие комплексной системы по проверке контрагентов<br>
+              и кандидатов при трудоустройстве на работу.</p>
+              <p> &nbsp; </p>
+              <p><b>Решение:</b></p>
+              <p>Разработка и внедрение регламентов по улучшению
+              текущей деятельности компании в части проверки
+              физических и юридических лиц, до начала
+              взаимодействия.</p>
+              <p>
+                <a class="btn btn-warning btn-lg" href="#modal-order" data-toggle="modal">Хочу также</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="results__item">
+        <div class="row">
+          <div class="col-12 col-sm-5 col-md-6">
+            <img class="results__item__img" src="img/sert.jpg" alt="">
+          </div>
+          <div class="col-12 col-sm-7 col-md-6">
+            <div class="results__item__content">
+              <p><b>Главное управление министерства внутренних дел <br>
+                  Российской Федерации по Северо-западному Федеральному округу</b></p>
+              <p><b>Проблема:</b></p>
+              <p>Отсутствие комплексной системы по проверке контрагентов<br>
+              и кандидатов при трудоустройстве на работу.</p>
+              <p> &nbsp; </p>
+              <p><b>Решение:</b></p>
+              <p>Разработка и внедрение регламентов по улучшению
+              текущей деятельности компании в части проверки
+              физических и юридических лиц, до начала
+              взаимодействия.</p>
+              <p>
+                <a class="btn btn-warning btn-lg" href="#modal-order" data-toggle="modal">Хочу также</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="pluso">
+  <div class="container">
+    <div class="pluso__title">Преимущества нашей компании</div>
+    <div class="row">
+      <div class="col-12 col-lg-10 offset-lg-1">
+        <div class="row justify-content-center">
+          <div class="col-12 col-sm-6 col-md-4">
+            <div class="pluso__item">
+              <img class="pluso__item__img" src="img/pluso-1.png" alt="">
+              <div class="pluso__item__title">Собственная методика работы с задолженностью</div>
+              <div class="pluso__item__descr">11 лет мы совершенствовали имеющиеся инструменты и изобретали новые, для того, чтобы быть лучшими в своем деле</div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4">
+            <div class="pluso__item">
+              <img class="pluso__item__img" src="img/pluso-2.png" alt="">
+              <div class="pluso__item__title">Работаем исключительно в правовом поле</div>
+              <div class="pluso__item__descr">Каждое действие оперативных сотрудников подкреплено законом. Репутация нашего партнера всегда находиться в безопасности</div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4">
+            <div class="pluso__item">
+              <img class="pluso__item__img" src="img/pluso-3.png" alt="">
+              <div class="pluso__item__title">Собственная оперативная группа</div>
+              <div class="pluso__item__descr">На каждом этапе работ стоят наши высококвалифицированные сотрудники, что обеспечивает качественный информационный поток, скорость принятия решений и выполнение договоренностей</div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4">
+            <div class="pluso__item">
+              <img class="pluso__item__img" src="img/pluso-4.png" alt="">
+              <div class="pluso__item__title">Сотрудничаем с госорганами</div>
+              <div class="pluso__item__descr">В ходе работы, наши сотрудники не только возвращают задолженности, но и выявляют мошенников и иные факты преступлений. В таких ситуациях мы обращаемся к нашим коллегам из госорганов</div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4">
+            <div class="pluso__item">
+              <img class="pluso__item__img" src="img/pluso-5.png" alt="">
+              <div class="pluso__item__title">Собственный аналитический отдел</div>
+              <div class="pluso__item__descr">Мы знаем все о должнике, объектах собственности, его доходах, других активах и немного больше</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="text-center">
+      <a class="btn btn-warning btn-lg" href="#modal-zayavka" data-toggle="modal">Оставить заявку</a>
+    </div>
+  </div>
+</div>
+
+<div class="present">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-sm-6 ">
+        <div class="present__content">
+          <div class="present__title">
+            Скачайте бесплатную памятку<br>
+            по комплексной безопасности
+          </div>
+          <p class="present__descr">
+            Благодаря подготовленной универсальной памятке,
+            вы поймете насколько важно заниматься комплексной
+            безпасностью компании, а также начнете действовать
+            по решению насущных проблем уже сегодня
+          </p>
+          <p>
+            <a class="btn btn-warning btn-lg" href="#">Скачать</a>
+          </p>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 ">
+        <img src="img/book-pamyatka.png" alt="">
+      </div>
+    </div>
+  </div>
+</div>
 
 	
 	<footer class="footer">
