--- a/seb/mainpage.html
+++ b/seb/mainpage.html
@@ -26,14 +26,15 @@
 				</div>
 			</div>
 			<div class="col-12 col-md-8 col-lg-9">
-				<ul class="header__nav nav nav-header">
-					<li class="active"><a href="#">Главная</a></li>
-					<li><a href="#">Услуги</a></li>
-					<li><a href="#">Кейсы</a></li>
-					<li><a href="#">О компании</a></li>
-					<li><a href="#">СМИ о нас</a></li>
-					<li><a href="#">8 (812) 454-44-30</a></li>
-				</ul>
+				
+				    <ul class="header__nav nav nav-header">
+				        <li class="active"><a href="/mainpage.html">Главная</a></li>
+				        <li><a href="/services.html">Услуги</a></li>
+				        <li><a href="/cases.html">Кейсы</a></li>
+				        <li><a href="/services-2.html">О компании</a></li>
+				        <li><a href="#">СМИ о нас</a></li>
+				        <li><a href="#">8 (812) 454-44-30</a></li>
+				      </ul>
 			</div>
 		</nav>
 	</div>
@@ -71,70 +72,71 @@
 </header>
 
 
+	<footer class="footer section fp-auto-height">
+      <div class="container">
+        <div class="footer__top">
+          <div class="row align-items-center">
+            <div class="col-12 col-sm-6 col-md-4 order-2 order-md-1">
+              <div class="footer__address">
+                194356, г. Санкт-Петербург,<br>
+                Выборгское шоссе, 36<br>
+                БЦ "Модуль"
+              </div>
+            </div>
+            <div class="col-12 col-md-4 order-1 order-md-2">
+              <a href="/" class="footer__logo">
+                <img src="img/logo-inverse.png" alt="">
+              </a>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 order-3 order-md-3">
+              <a class="footer__phone" href="tel:8 (812) 454-44-05">8 (812) 454-44-05</a>
+            </div>
+          </div>
+        </div>
+  
+        <nav>
+          <ul class="nav nav-footer">
+            <li><a href="#">Главная</a></li>
+            <li><a href="#">Услуги</a></li>
+            <li><a href="#">Кейсы</a></li>
+            <li><a href="#">О компании</a></li>
+            <li><a href="#">СМИ о нас</a></li>
+          </ul>
+        </nav>
+  
+        <nav>
+          <ul class="nav nav-footer-ext">
+            <li><a href="#">Комплексная безопасность</a></li>
+            <li><a href="#">Работа с дебеторской задолженностью</a></li>
+            <li><a href="#">Информационно аналитические услуги</a></li>
+            <li><a href="#">Внедрение инструментов безопасности</a></li>
+            <li><a href="#">Взаимодействие с госорганами</a></li>
+            <li><a href="#">Сопровождение компании</a></li>
+          </ul>
+        </nav>
+  
+        <div class="footer__social">
+          <h5 class="footer__social__title">Мы в социальных сетях</h5>
+        </div>
+      </div>
+  
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-sm-6">
+            <p class="footer__copy">
+              <a href="#">Согласие на обработку персональных данных</a>
+            </p>
+          </div>
+          <div class="col-12 col-sm-6">
+            <p class="footer__policy">
+              <a href="#">Политика конфиденциальности</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
 	
-	<footer class="footer">
-		<div class="container">
-			<div class="footer__top">
-				<div class="row align-items-center">
-					<div class="col-12 col-sm-6 col-md-4 order-2 order-md-1">
-						<div class="footer__address">
-							194356, г. Санкт-Петербург,<br>
-							Выборгское шоссе, 36<br>
-							БЦ "Модуль"
-						</div>
-					</div>
-					<div class="col-12 col-md-4 order-1 order-md-2">
-						<a href="/" class="footer__logo">
-							<img src="img/logo-inverse.png" alt="">
-						</a>
-					</div>
-					<div class="col-12 col-sm-6 col-md-4 order-3 order-md-3">
-						<a class="footer__phone" href="tel:8 (812) 454-44-05">8 (812) 454-44-05</a>
-					</div>
-				</div>
-			</div>
-
-			<nav>
-				<ul class="nav nav-footer">
-					<li><a href="#">Главная</a></li>
-					<li><a href="#">Услуги</a></li>
-					<li><a href="#">Кейсы</a></li>
-					<li><a href="#">О компании</a></li>
-					<li><a href="#">СМИ о нас</a></li>
-				</ul>
-			</nav>
-
-			<nav>
-				<ul class="nav nav-footer-ext">
-					<li><a href="#">Комплексная безопасность</a></li>
-					<li><a href="#">Работа с дебеторской задолженностью</a></li>
-					<li><a href="#">Информационно аналитические услуги</a></li>
-					<li><a href="#">Внедрение инструментов безопасности</a></li>
-					<li><a href="#">Взаимодействие с госорганами</a></li>
-					<li><a href="#">Сопровождение компании</a></li>
-				</ul>
-			</nav>
-
-			<div class="footer__social">
-				<h5 class="footer__social__title">Мы в социальных сетях</h5>
-			</div>
-		</div>
-
-		<div class="container">
-			<div class="row">
-				<div class="col-12 col-sm-6">
-					<p class="footer__copy">
-						<a href="#">Согласие на обработку персональных данных</a>
-					</p>
-				</div>
-				<div class="col-12 col-sm-6">
-					<p class="footer__policy">
-						<a href="#">Политика конфиденциальности</a>
-					</p>
-				</div>
-			</div>
-		</div>
-	</footer>
 
 	<script src="js/main.js"></script>
 </body>
