--- a/seb/services.html
+++ b/seb/services.html
@@ -12,7 +12,9 @@
 </head>
 <body>
 
-<header class="header section-window" style="background-image: url('img/services-1.jpg')">
+<div id="fullpage">
+
+<header class="header section section-window" style="background-image: url('img/services-1.jpg')">
   <div class="container">
 		<nav class="row align-items-center">
 			<div class="col-12 col-md-4 col-lg-3 d-flex align-items-center justify-content-between">
@@ -26,14 +28,15 @@
 				</div>
 			</div>
 			<div class="col-12 col-md-8 col-lg-9">
-				<ul class="header__nav nav nav-header">
-					<li class="active"><a href="#">Главная</a></li>
-					<li><a href="#">Услуги</a></li>
-					<li><a href="#">Кейсы</a></li>
-					<li><a href="#">О компании</a></li>
-					<li><a href="#">СМИ о нас</a></li>
-					<li><a href="#">8 (812) 454-44-30</a></li>
-				</ul>
+          
+              <ul class="header__nav nav nav-header">
+                  <li class="active"><a href="/mainpage.html">Главная</a></li>
+                  <li><a href="/services.html">Услуги</a></li>
+                  <li><a href="/cases.html">Кейсы</a></li>
+                  <li><a href="/services-2.html">О компании</a></li>
+                  <li><a href="#">СМИ о нас</a></li>
+                  <li><a href="#">8 (812) 454-44-30</a></li>
+                </ul>
 			</div>
 		</nav>
   </div>
@@ -126,7 +129,7 @@
 	</section>
 </header>
 
-<section class="header header--inverse section-window" style="background-image: url('img/services-2.jpg')">
+<section class="header section header--inverse section-window" style="background-image: url('img/services-2.jpg')">
   <div class="container">
     <nav class="row align-items-center">
       <div class="col-12 col-md-4 col-lg-3 d-flex align-items-center justify-content-between">
@@ -209,7 +212,7 @@
 	</section>
 </section>
 
-<section class="header section-window" style="background-image: url('img/services-3.jpg')">
+<section class="header section section-window" style="background-image: url('img/services-3.jpg')">
   <div class="container">
     <nav class="row align-items-center">
       <div class="col-12 col-md-4 col-lg-3 d-flex align-items-center justify-content-between">
@@ -292,7 +295,7 @@
 	</section>
 </section>
 
-<section class="header header--inverse section-window" style="background-image: url('img/services-4.jpg')">
+<section class="header section header--inverse section-window" style="background-image: url('img/services-4.jpg')">
   <div class="container">
     <nav class="row align-items-center">
       <div class="col-12 col-md-4 col-lg-3 d-flex align-items-center justify-content-between">
@@ -381,7 +384,7 @@
 	</section>
 </section>
 
-<section class="header section-window" style="background-image: url('img/services-5.jpg')">
+<section class="header section section-window" style="background-image: url('img/services-5.jpg')">
   <div class="container">
     <nav class="row align-items-center">
       <div class="col-12 col-md-4 col-lg-3 d-flex align-items-center justify-content-between">
@@ -464,7 +467,7 @@
 	</section>
 </section>
 
-<section class="header section-window" style="background-image: url('img/services-6.jpg')">
+<section class="header section section-window" style="background-image: url('img/services-6.jpg')">
   <div class="container">
     <nav class="row align-items-center">
       <div class="col-12 col-md-4 col-lg-3 d-flex align-items-center justify-content-between">
@@ -547,70 +550,74 @@
 	</section>
 </section>
 
+
+	<footer class="footer section fp-auto-height">
+      <div class="container">
+        <div class="footer__top">
+          <div class="row align-items-center">
+            <div class="col-12 col-sm-6 col-md-4 order-2 order-md-1">
+              <div class="footer__address">
+                194356, г. Санкт-Петербург,<br>
+                Выборгское шоссе, 36<br>
+                БЦ "Модуль"
+              </div>
+            </div>
+            <div class="col-12 col-md-4 order-1 order-md-2">
+              <a href="/" class="footer__logo">
+                <img src="img/logo-inverse.png" alt="">
+              </a>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 order-3 order-md-3">
+              <a class="footer__phone" href="tel:8 (812) 454-44-05">8 (812) 454-44-05</a>
+            </div>
+          </div>
+        </div>
+  
+        <nav>
+          <ul class="nav nav-footer">
+            <li><a href="#">Главная</a></li>
+            <li><a href="#">Услуги</a></li>
+            <li><a href="#">Кейсы</a></li>
+            <li><a href="#">О компании</a></li>
+            <li><a href="#">СМИ о нас</a></li>
+          </ul>
+        </nav>
+  
+        <nav>
+          <ul class="nav nav-footer-ext">
+            <li><a href="#">Комплексная безопасность</a></li>
+            <li><a href="#">Работа с дебеторской задолженностью</a></li>
+            <li><a href="#">Информационно аналитические услуги</a></li>
+            <li><a href="#">Внедрение инструментов безопасности</a></li>
+            <li><a href="#">Взаимодействие с госорганами</a></li>
+            <li><a href="#">Сопровождение компании</a></li>
+          </ul>
+        </nav>
+  
+        <div class="footer__social">
+          <h5 class="footer__social__title">Мы в социальных сетях</h5>
+        </div>
+      </div>
+  
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-sm-6">
+            <p class="footer__copy">
+              <a href="#">Согласие на обработку персональных данных</a>
+            </p>
+          </div>
+          <div class="col-12 col-sm-6">
+            <p class="footer__policy">
+              <a href="#">Политика конфиденциальности</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+</div>
+
 	
-	<footer class="footer">
-		<div class="container">
-			<div class="footer__top">
-				<div class="row align-items-center">
-					<div class="col-12 col-sm-6 col-md-4 order-2 order-md-1">
-						<div class="footer__address">
-							194356, г. Санкт-Петербург,<br>
-							Выборгское шоссе, 36<br>
-							БЦ "Модуль"
-						</div>
-					</div>
-					<div class="col-12 col-md-4 order-1 order-md-2">
-						<a href="/" class="footer__logo">
-							<img src="img/logo-inverse.png" alt="">
-						</a>
-					</div>
-					<div class="col-12 col-sm-6 col-md-4 order-3 order-md-3">
-						<a class="footer__phone" href="tel:8 (812) 454-44-05">8 (812) 454-44-05</a>
-					</div>
-				</div>
-			</div>
-
-			<nav>
-				<ul class="nav nav-footer">
-					<li><a href="#">Главная</a></li>
-					<li><a href="#">Услуги</a></li>
-					<li><a href="#">Кейсы</a></li>
-					<li><a href="#">О компании</a></li>
-					<li><a href="#">СМИ о нас</a></li>
-				</ul>
-			</nav>
-
-			<nav>
-				<ul class="nav nav-footer-ext">
-					<li><a href="#">Комплексная безопасность</a></li>
-					<li><a href="#">Работа с дебеторской задолженностью</a></li>
-					<li><a href="#">Информационно аналитические услуги</a></li>
-					<li><a href="#">Внедрение инструментов безопасности</a></li>
-					<li><a href="#">Взаимодействие с госорганами</a></li>
-					<li><a href="#">Сопровождение компании</a></li>
-				</ul>
-			</nav>
-
-			<div class="footer__social">
-				<h5 class="footer__social__title">Мы в социальных сетях</h5>
-			</div>
-		</div>
-
-		<div class="container">
-			<div class="row">
-				<div class="col-12 col-sm-6">
-					<p class="footer__copy">
-						<a href="#">Согласие на обработку персональных данных</a>
-					</p>
-				</div>
-				<div class="col-12 col-sm-6">
-					<p class="footer__policy">
-						<a href="#">Политика конфиденциальности</a>
-					</p>
-				</div>
-			</div>
-		</div>
-	</footer>
 
 	<script src="js/main.js"></script>
 </body>
