--- a/seb/cases.html
+++ b/seb/cases.html
@@ -14,7 +14,7 @@
 
 <div id="fullpage">
 
-<header class="header section section-window" style="background-image: url('img/bg-case-1.jpg')">
+<header id="case-1" class="header section section-window" style="background-image: url('img/bg-case-1.jpg')">
   <div class="container">
 		<nav class="row align-items-center">
 			<div class="col-12 col-md-4 col-lg-3 d-flex align-items-center justify-content-between">
@@ -65,10 +65,10 @@
 				</div>
 				<div class="col-12 col-md-5 col-lg-6 d-flex justify-content-end">
           <div class="hero__content">
-            <ul>
+            <ul class="js-nav-scroll">
               <li><span class="big text-bold">История о мусорных мешках</span></li>
-              <li>Как легко начать и закончить бизнес<br> в интернете</li>
-              <li>Как превратить двух подруг в злейших<br> врагов</li>
+              <li><a href="#case-2">Как легко начать и закончить бизнес<br> в интернете</a></li>
+              <li><a href="#case-3">Как превратить двух подруг в злейших<br> врагов</a></li>
             </ul>
           </div>
 				</div>
@@ -77,7 +77,7 @@
 	</section>
 </header>
 
-<section class="header section header--inverse section-window" style="background-image: url('img/bg-case-2.jpg')">
+<section id="case-2" class="header section header--inverse section-window" style="background-image: url('img/bg-case-2.jpg')">
   <div class="container">
     <nav class="row align-items-center">
       <div class="col-12 col-md-4 col-lg-3 d-flex align-items-center justify-content-between">
@@ -112,10 +112,10 @@
         </div>
         <div class="col-12 col-md-5 col-lg-6 d-flex justify-content-end">
           <div class="hero__content">
-            <ul>
-              <li>История о мусорных мешках</li>
+            <ul class="js-nav-scroll">
+              <li><a href="#case-1">История о мусорных мешках</a></li>
               <li><span class="big text-bold">Как легко начать и закончить бизнес<br> в интернете</span></li>
-              <li>Как превратить двух подруг в злейших<br> врагов</li>
+              <li><a href="#case-3">Как превратить двух подруг в злейших<br> врагов</a></li>
             </ul>
           </div>
         </div>
@@ -124,7 +124,7 @@
   </section>
 </section>
 
-<section class="header section section-window" style="background-image: url('img/bg-case-3.jpg')">
+<section id="case-3" class="header section section-window" style="background-image: url('img/bg-case-3.jpg')">
   <div class="container">
     <nav class="row align-items-center">
       <div class="col-12 col-md-4 col-lg-3 d-flex align-items-center justify-content-between">
@@ -159,9 +159,9 @@
         </div>
         <div class="col-12 col-md-5 col-lg-6 d-flex justify-content-end">
           <div class="hero__content">
-            <ul>
-              <li>История о мусорных мешках</li>
-              <li>Как легко начать и закончить бизнес<br> в интернете</li>
+            <ul class="js-nav-scroll">
+              <li><a href="#case-1">История о мусорных мешках</a></li>
+              <li><a href="#case-2">Как легко начать и закончить бизнес<br> в интернете</a></li>
               <li><span class="big text-bold">Как превратить двух подруг в злейших<br> врагов</span></li>
             </ul>
           </div>
