--- a/seb/services.html
+++ b/seb/services.html
@@ -14,7 +14,7 @@
 
 <div id="fullpage">
 
-<header class="header section section-window" style="background-image: url('img/services-1.jpg')">
+<header id="service-1" class="header section section-window" style="background-image: url('img/services-1.jpg')">
   <div class="container">
 		<nav class="row align-items-center">
 			<div class="col-12 col-md-4 col-lg-3 d-flex align-items-center justify-content-between">
@@ -114,13 +114,13 @@
 				</div>
 				<div class="col-12 col-md-5 col-lg-6 d-flex justify-content-end">
           <div class="hero__content hero__content--no-height">
-            <ul>
+            <ul clas="js-nav-scroll">
               <li><span class="big text-bold">Комплексная безопасность</span></li>
-              <li>Работа с дебеторской задолженностью</li>
-              <li>Информационно-аналитические услуги</li>
-              <li>Внедрение инструментов безопасности</li>
-              <li>Взаимодействие с госорганами</li>
-              <li>Сопровождение компании</li>
+              <li><a href="#service-2">Работа с дебеторской задолженностью</a></li>
+              <li><a href="#service-3">Информационно-аналитические услуги</a></li>
+              <li><a href="#service-4">Внедрение инструментов безопасности</a></li>
+              <li><a href="#service-5">Взаимодействие с госорганами</a></li>
+              <li><a href="#service-6">Сопровождение компании</a></li>
             </ul>
           </div>
 				</div>
@@ -129,7 +129,7 @@
 	</section>
 </header>
 
-<section class="header section header--inverse section-window" style="background-image: url('img/services-2.jpg')">
+<section id="service-2" class="header section header--inverse section-window" style="background-image: url('img/services-2.jpg')">
   <div class="container">
     <nav class="row align-items-center">
       <div class="col-12 col-md-4 col-lg-3 d-flex align-items-center justify-content-between">
@@ -197,13 +197,13 @@
 				</div>
 				<div class="col-12 col-md-5 col-lg-6 d-flex justify-content-end">
           <div class="hero__content hero__content--no-height">
-            <ul>
-              <li>Комплексная безопасность</li>
+            <ul class="js-nav-scroll">
+              <li><a href="#service-1">Комплексная безопасность</a></li>
               <li><span class="big text-bold">Работа с дебеторской задолженностью</span></li>
-              <li>Информационно-аналитические услуги</li>
-              <li>Внедрение инструментов безопасности</li>
-              <li>Взаимодействие с госорганами</li>
-              <li>Сопровождение компании</li>
+              <li><a href="#service-3">Информационно-аналитические услуги</a></li>
+              <li><a href="#service-4">Внедрение инструментов безопасности</a></li>
+              <li><a href="#service-5">Взаимодействие с госорганами</a></li>
+              <li><a href="#service-6">Сопровождение компании</a></li>
             </ul>
           </div>
 				</div>
@@ -212,7 +212,7 @@
 	</section>
 </section>
 
-<section class="header section section-window" style="background-image: url('img/services-3.jpg')">
+<section id="service-3" class="header section section-window" style="background-image: url('img/services-3.jpg')">
   <div class="container">
     <nav class="row align-items-center">
       <div class="col-12 col-md-4 col-lg-3 d-flex align-items-center justify-content-between">
@@ -280,13 +280,13 @@
 				</div>
 				<div class="col-12 col-md-5 col-lg-6 d-flex justify-content-end">
           <div class="hero__content hero__content--no-height">
-            <ul>
-              <li>Комплексная безопасность</li>
-              <li>Работа с дебеторской задолженностью</li>
+            <ul class="js-nav-scroll">
+              <li><a href="#service-1">Комплексная безопасность</a></li>
+              <li><a href="#service-2">Работа с дебеторской задолженностью</a></li>
               <li><span class="big text-bold">Информационно-аналитические услуги</span></li>
-              <li>Внедрение инструментов безопасности</li>
-              <li>Взаимодействие с госорганами</li>
-              <li>Сопровождение компании</li>
+              <li><a href="#service-4">Внедрение инструментов безопасности</a></li>
+              <li><a href="#service-5">Взаимодействие с госорганами</a></li>
+              <li><a href="#service-6">Сопровождение компании</a></li>
             </ul>
           </div>
 				</div>
@@ -295,7 +295,7 @@
 	</section>
 </section>
 
-<section class="header section header--inverse section-window" style="background-image: url('img/services-4.jpg')">
+<section id="service-4" class="header section header--inverse section-window" style="background-image: url('img/services-4.jpg')">
   <div class="container">
     <nav class="row align-items-center">
       <div class="col-12 col-md-4 col-lg-3 d-flex align-items-center justify-content-between">
@@ -369,13 +369,13 @@
 				</div>
 				<div class="col-12 col-md-5 col-lg-6 d-flex justify-content-end">
           <div class="hero__content hero__content--no-height">
-            <ul>
-              <li>Комплексная безопасность</li>
-              <li>Работа с дебеторской задолженностью</li>
-              <li>Информационно-аналитические услуги</li>
+            <ul class="js-nav-scroll">
+              <li><a href="#service-1">Комплексная безопасность</a></li>
+              <li><a href="#service-2">Работа с дебеторской задолженностью</a></li>
+              <li><a href="#service-3">Информационно-аналитические услуги</a></li>
               <li><span class="big text-bold">Внедрение инструментов безопасности</span></li>
-              <li>Взаимодействие с госорганами</li>
-              <li>Сопровождение компании</li>
+              <li><a href="#service-5">Взаимодействие с госорганами</a></li>
+              <li><a href="#service-6">Сопровождение компании</a></li>
             </ul>
           </div>
 				</div>
@@ -384,7 +384,7 @@
 	</section>
 </section>
 
-<section class="header section section-window" style="background-image: url('img/services-5.jpg')">
+<section id="service-5" class="header section section-window" style="background-image: url('img/services-5.jpg')">
   <div class="container">
     <nav class="row align-items-center">
       <div class="col-12 col-md-4 col-lg-3 d-flex align-items-center justify-content-between">
@@ -452,13 +452,13 @@
 				</div>
 				<div class="col-12 col-md-5 col-lg-6 d-flex justify-content-end">
           <div class="hero__content hero__content--no-height">
-            <ul>
-              <li>Комплексная безопасность</li>
-              <li>Работа с дебеторской задолженностью</li>
-              <li>Информационно-аналитические услуги</li>
-              <li>Внедрение инструментов безопасности</li>
+            <ul class="js-nav-scroll">
+              <li><a href="#service-1">Комплексная безопасность</a></li>
+              <li><a href="#service-2">Работа с дебеторской задолженностью</a></li>
+              <li><a href="#service-3">Информационно-аналитические услуги</a></li>
+              <li><a href="#service-4">Внедрение инструментов безопасности</a></li>
               <li><span class="big text-bold">Взаимодействие с госорганами</span></li>
-              <li>Сопровождение компании</li>
+              <li><a href="#service-6">Сопровождение компании</a></li>
             </ul>
           </div>
 				</div>
@@ -467,7 +467,7 @@
 	</section>
 </section>
 
-<section class="header section section-window" style="background-image: url('img/services-6.jpg')">
+<section id="service-6" class="header section section-window" style="background-image: url('img/services-6.jpg')">
   <div class="container">
     <nav class="row align-items-center">
       <div class="col-12 col-md-4 col-lg-3 d-flex align-items-center justify-content-between">
@@ -535,12 +535,12 @@
 				</div>
 				<div class="col-12 col-md-5 col-lg-6 d-flex justify-content-end">
           <div class="hero__content hero__content--no-height">
-            <ul>
-              <li>Комплексная безопасность</li>
-              <li>Работа с дебеторской задолженностью</li>
-              <li>Информационно-аналитические услуги</li>
-              <li>Внедрение инструментов безопасности</li>
-              <li>Взаимодействие с госорганами</li>
+            <ul class="js-nav-scroll">
+              <li><a href="#service-1">Комплексная безопасность</a></li>
+              <li><a href="#service-2">Работа с дебеторской задолженностью</a></li>
+              <li><a href="#service-3">Информационно-аналитические услуги</a></li>
+              <li><a href="#service-4">Внедрение инструментов безопасности</a></li>
+              <li><a href="#service-5">Взаимодействие с госорганами</a></li>
               <li><span class="big text-bold">Сопровождение компании</span></li>
             </ul>
           </div>
