--- a/seb/index.html
+++ b/seb/index.html
@@ -14,15 +14,62 @@
 
 <div class="container">
   <ul>
-    <li><a href="mainpage.html">Mainpage</a></li>
-    <li><a href="services-2.html">Inform Services</a></li>
-    <li><a href="cases.html">Cases</a></li>
-    <li><a href="services.html">Services</a></li>
+    <li><a href="mainpage.html">Главная</a></li>
+    <li><a href="services-2.html">Информационно-аналитические услуги</a></li>
+    <li><a href="cases.html">Кейсы</a></li>
+    <li><a href="services.html">Услуги</a></li>
+    <li><a href="complex-security.html">Комплексная безопасность</a></li>
+    <li><a href="about-smi.html">СМИ о нас</a></li>
   </ul>
 </div>
 
-	
+<div class="modal fade" id="modal-pamyatka">
+	<div class="modal-dialog modal-lg">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+			</div>
+			<div class="modal-body">
+				<div class="row">
+					<div class="col-12 col-md-12 col-lg-5 offset-lg-1 order-1 order-md-2">
+						<div class="modal-title">
+							Скачайте бесплатную памятку по комплексной безопасности
+						</div>
+						<p>
+							Мы отправим на введенный email памятку по комплексной безопасности бизнеса
+						</p>
+						<p>
+							В данной памятке мы обозначим все проблемы человечества и вся Руси.
+						</p>
+						<p>
+							Мы научим и скажем Вам как жить, чего. бояться и как строить отношения
+						</p>
+						<p> &nbsp; </p>
 
-	<script src="js/main.js"></script>
+						<form action="">
+							<div class="row">
+								<div class="col-12 col-md-10 offset-md-1">
+									<div class="form-group">
+										<input class="form-control form-control-lg text-center" name="phone" type="text" placeholder="+7 (___) ___-__-__">
+									</div>
+									<div class="form-group">
+										<button class="btn btn-warning btn-lg btn-block" type="submit">Скачать</button>
+									</div>
+								</div>
+							</div>
+						</form>
+					</div>
+					<div class="col-12 col-md-12 col-lg-5 text-center order-2 order-md-1 hidden-md-down">
+						<p><img src="img/book-pamyatka.png" alt=""></p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<script src="js/main.js"></script>
 </body>
+
 </html>
