--- a/seb/mainpage.html
+++ b/seb/mainpage.html
@@ -34,7 +34,10 @@
 				        <li><a href="/services-2.html">О компании</a></li>
 				        <li><a href="#">СМИ о нас</a></li>
 				        <li><a href="#">8 (812) 454-44-30</a></li>
-				      </ul>
+				        <li class="nav-header__btn">
+				            <a class="btn btn-warning" href="#modal-feedback">Связаться<br> с нами</a>
+				        </li>
+				    </ul>
 			</div>
 		</nav>
 	</div>
@@ -63,7 +66,7 @@
 						</p>
 					</div>
 				</div>
-				<div class="col-12 col-md-5 col-lg-6">
+				<div class="col-12 col-md-5 col-lg-6 hidden-xs">
 					<img class="hero__content__img" src="img/alexandr-sabovich.png" alt="Александр Сэбович">
 				</div>
 			</div>
@@ -117,6 +120,11 @@
   
         <div class="footer__social">
           <h5 class="footer__social__title">Мы в социальных сетях</h5>
+          <div class="footer__social__icons">
+            <a href="#" class="footer__social__icon">
+              <i class="fa fa-vk"></i>
+            </a>
+          </div>
         </div>
       </div>
   
@@ -136,8 +144,53 @@
       </div>
     </footer>
 
-	
+<div class="modal fade" id="modal-pamyatka">
+	<div class="modal-dialog modal-lg">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+			</div>
+			<div class="modal-body">
+				<div class="row">
+					<div class="col-12 col-md-12 col-lg-5 offset-lg-1 order-1 order-md-2">
+						<div class="modal-title">
+							Скачайте бесплатную памятку по комплексной безопасности
+						</div>
+						<p>
+							Мы отправим на введенный email памятку по комплексной безопасности бизнеса
+						</p>
+						<p>
+							В данной памятке мы обозначим все проблемы человечества и вся Руси.
+						</p>
+						<p>
+							Мы научим и скажем Вам как жить, чего. бояться и как строить отношения
+						</p>
+						<p> &nbsp; </p>
 
-	<script src="js/main.js"></script>
+						<form action="">
+							<div class="row">
+								<div class="col-12 col-md-10 offset-md-1">
+									<div class="form-group">
+										<input class="form-control form-control-lg text-center" name="phone" type="text" placeholder="+7 (___) ___-__-__">
+									</div>
+									<div class="form-group">
+										<button class="btn btn-warning btn-lg btn-block" type="submit">Скачать</button>
+									</div>
+								</div>
+							</div>
+						</form>
+					</div>
+					<div class="col-12 col-md-12 col-lg-5 text-center order-2 order-md-1 hidden-md-down">
+						<p><img src="img/book-pamyatka.png" alt=""></p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<script src="js/main.js"></script>
 </body>
+
 </html>
