--- a/seb/about-smi.html
+++ b/seb/about-smi.html
@@ -387,7 +387,7 @@
 			</div>
 			<div class="modal-body">
 				<div class="row">
-					<div class="col-12 col-md-12 col-lg-5 offset-lg-1 order-1 order-md-2">
+					<div class="col-12 col-md-12 col-lg-5 offset-lg-1">
 						<div class="modal-title">
 							Скачайте бесплатную памятку по комплексной безопасности
 						</div>
@@ -415,7 +415,7 @@
 							</div>
 						</form>
 					</div>
-					<div class="col-12 col-md-12 col-lg-5 text-center order-2 order-md-1 hidden-md-down">
+					<div class="col-12 col-md-12 col-lg-5 text-center hidden-md-down">
 						<p><img src="img/book-pamyatka.png" alt=""></p>
 					</div>
 				</div>
