--- a/seb/complex-security.html
+++ b/seb/complex-security.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<header class="header" style="background-image: url('img/bg-complex-security.jpg');">
+<header class="header section-window" style="background-image: url('img/bg-complex-security.jpg');">
 	<div class="container">
 		<nav class="row align-items-center">
 			<div class="col-12 col-md-4 col-lg-3 d-flex align-items-center justify-content-between">
@@ -158,49 +158,63 @@
     <div class="row justify-content-center">
       <div class="col-6 col-md-4 col-lg-3">
         <div class="partner__item">
-          <img class="partner__item__img" src="img/partner-1.png" alt="">
+          <div class="partner__item__image">
+            <img class="partner__item__img" src="img/partner-1.png" alt="">
+          </div>
           <div class="partner__item__title">Федеральная налоговая служба</div>
           <div class="partner__item__descr">Проверка контрагента занимает на 30% меньше времени</div>
         </div>
       </div>
       <div class="col-6 col-md-4 col-lg-3">
         <div class="partner__item">
-          <img class="partner__item__img" src="img/partner-2.png" alt="">
+          <div class="partner__item__image">
+            <img class="partner__item__img" src="img/partner-2.png" alt="">
+          </div>
           <div class="partner__item__title">Федеральная служба судебных приставов</div>
           <div class="partner__item__descr">Проверка контрагента занимает на 30% меньше времени</div>
         </div>
       </div>
       <div class="col-6 col-md-4 col-lg-3">
         <div class="partner__item">
-          <img class="partner__item__img" src="img/partner-3.png" alt="">
+          <div class="partner__item__image">
+            <img class="partner__item__img" src="img/partner-3.png" alt="">
+          </div>
           <div class="partner__item__title">Министерство внутренних дел России</div>
           <div class="partner__item__descr">Проверка контрагента занимает на 30% меньше времени</div>
         </div>
       </div>
       <div class="col-6 col-md-4 col-lg-3">
         <div class="partner__item">
-          <img class="partner__item__img" src="img/partner-4.png" alt="">
+          <div class="partner__item__image">
+            <img class="partner__item__img" src="img/partner-4.png" alt="">
+          </div>
           <div class="partner__item__title">Роспотребнадзор</div>
           <div class="partner__item__descr">Проверка контрагента занимает на 30% меньше времени</div>
         </div>
       </div>
       <div class="col-6 col-md-4 col-lg-3">
         <div class="partner__item">
-          <img class="partner__item__img" src="img/partner-5.png" alt="">
+          <div class="partner__item__image">
+            <img class="partner__item__img" src="img/partner-5.png" alt="">
+          </div>
           <div class="partner__item__title">Арбитражный суд</div>
           <div class="partner__item__descr">Проверка контрагента занимает на 30% меньше времени</div>
         </div>
       </div>
       <div class="col-6 col-md-4 col-lg-3">
         <div class="partner__item">
-          <img class="partner__item__img" src="img/partner-6.png" alt="">
+          <div class="partner__item__image">
+            <img class="partner__item__img" src="img/partner-6.png" alt="">
+          </div>
           <div class="partner__item__title">Государственная инспекция труда</div>
           <div class="partner__item__descr">Проверка контрагента занимает на 30% меньше времени</div>
         </div>
       </div>
       <div class="col-6 col-md-4 col-lg-3">
         <div class="partner__item">
-          <img class="partner__item__img" src="img/partner-7.png" alt="">
+          <div class="partner__item__image">
+            <img class="partner__item__img" src="img/partner-7.png" alt="">
+          </div>
           <div class="partner__item__title">Госпожнадзор</div>
           <div class="partner__item__descr">Проверка контрагента занимает на 30% меньше времени</div>
         </div>
