--- a/seb/index.html
+++ b/seb/index.html
@@ -15,6 +15,7 @@
         <li><a href="cases.html">Кейсы</a></li>
         <li><a href="case-sample.html">О мусорных мешках и убытках на 3 миллиона рублей</a></li>
         <li><a href="services.html">Услуги</a></li>
+        <li><a href="service-sample.html">Работа с дебиторской задолженностью</a></li>
         <li><a href="complex-security.html">Комплексная безопасность</a></li>
         <li><a href="about-smi.html">СМИ о нас</a></li>
       </ul>
