--- a/urbanbox/index.html
+++ b/urbanbox/index.html
@@ -9,6 +9,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="css/styles.css">
+	<meta name="robots" content="noindex"/>
 </head>
 
 <body>
